--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build"
+        "build": "tsc && vite build",
+        "start": "node --env-file=.env dist/index.js"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
